# AUTOSKP2GLB

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: publish.yaml  trivy.yaml
lib/: CMakeLists.txt
lib/SketchUpSDK/: CMakeLists.txt
lib/SketchUpSDK/headers/SketchUpAPI/geometry/: transformation2d.h
lib/SketchUpSDK/headers/SketchUpAPI/import_export/: modelexporterplugin.h  modelimporterplugin.h
lib/SketchUpSDK/headers/SketchUpAPI/model/: section_plane.h
src/: CMakeLists.txt  convert.cpp  extract.cpp  gltf.cpp  main.cpp  mqtt.cpp  storage.cpp
src/header/: convert.h  extract.h  gltf.h  mqtt.h  storage.h
